tests/textual/error/unConstrData.uplc
(program 0.0.0 [(builtin unConstrData) (con data { Integer 0 })])
